# software-supply-chain-security

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: repos.json
scripts/: add_submodules.py  generate_codeql.py  generate_grype.py  generate_sboms.py  vulnerability_analysis.ipynb
